--- a/q3a.service
+++ b/q3a.service
@@ -4,7 +4,7 @@ Description=This service spawns a ioquake3 dedicated server with sane defaults
 # See comments below for further details
 
 [Service]
-User=q3a
+User=ioq3srv
 ExecStart=$(which ioq3ded.x86_64) +set dedicated 2
 Restart=on-abort
 # there are several options to tweak the server's performance:
