--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ dependencies:
 
 test:
   override:
-    - docker build --rm=false -t q3a-server:latest -f ./test/Dockerfile.test ./test
+#    - docker build --rm=false -t q3a-server:latest -f ./test/Dockerfile.test ./test
 #    - docker run -it --name q3a-server-runner -p 27960:27960/udp q3a-server:latest server
 
 deployment:
@@ -25,7 +25,7 @@ deployment:
     commands:
       - $(aws ecr get-login --region ap-northeast-1)
       - docker tag q3a-server:latest 324996458579.dkr.ecr.ap-northeast-1.amazonaws.com/quake3/server:latest
-      - docker push 324996458579.dkr.ecr.ap-northeast-1.amazonaws.com/quake3/server
+      - docker push 324996458579.dkr.ecr.ap-northeast-1.amazonaws.com/quake3/server:latest
   production:
     branch: master
     commands:
