--- a/circle.yml
+++ b/circle.yml
@@ -4,14 +4,18 @@ machine:
     - docker
 
 dependencies:
+  pre:
+    - sudo apt-get update; sudo apt-get install jq nmap
   override:
     - docker info
     - docker build --rm=false -t q3a-server:latest ./
 
 test:
   override:
-#    - docker build --rm=false -t q3a-server:latest -f ./test/Dockerfile.test ./test
-#    - docker run -it --name q3a-server-runner -p 27960:27960/udp q3a-server:latest server
+    - docker run -it -d --name q3a-server-runner -p 27960:27960/udp q3a-server:latest server
+    - sleep 30
+    - sudo nmap -Pn -sU -p27960 localhost
+    - docker stop q3a-server-runner
 
 deployment:
   development:
@@ -32,3 +36,4 @@ deployment:
       - $(aws ecr get-login --region ap-northeast-1)
       - docker tag q3a-server:latest 324996458579.dkr.ecr.ap-northeast-1.amazonaws.com/quake3/server:latest
       - docker push 324996458579.dkr.ecr.ap-northeast-1.amazonaws.com/quake3/server:latest
+      - ./deploy.sh
