--- a/circle.yml
+++ b/circle.yml
@@ -36,4 +36,4 @@ deployment:
       - $(aws ecr get-login --region ap-northeast-1)
       - docker tag q3a-server:latest 324996458579.dkr.ecr.ap-northeast-1.amazonaws.com/quake3/server:latest
       - docker push 324996458579.dkr.ecr.ap-northeast-1.amazonaws.com/quake3/server:latest
-      - ./deploy.sh
+      - ./ecs-deploy.sh
