--- a/k8s/pods.yml
+++ b/k8s/pods.yml
@@ -4,6 +4,8 @@ metadata:
   name: q3a-server
 spec:
   containers:
-    - image: asia.gcr.io/${PROJECT_ID}/q3a-server:${CIRCLE_SHA1}
-      imagePullPolicy: Always
-      name: q3a-server
+    - name: q3a-server
+      image: asia.gcr.io/${PROJECT_ID}/q3a-server:${CIRCLE_SHA1}
+      ports:
+        - containerPort: 27960
+          protocol: UDP
