fixed type LoadBalancer

--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -5,8 +5,8 @@ metadata:
 spec:
   selector:
     app: q3a-server
-  type: NodePort
-#  type: LoadBalancer
+#  type: NodePort
+  type: LoadBalancer
   ports:
     - protocol: UDP
       port: 27960
