--- a/circle-gcp.yml
+++ b/circle-gcp.yml
@@ -1,30 +1,77 @@
-machine:
-  timezone: Asia/Tokyo
-  services:
-    - docker
+version: 2
+jobs:
+  build:
+    machine: true
+    steps:
+      - checkout
+      - restore_cache:
+          key: docker-{{ checksum ".circleci/config.yml" }}-{{ checksum "Dockerfile" }}
+          paths: ~/caches/images.tar
+      - run:
+          name: Check cache file, if not exists then pull images and generate cache.
+          command: |
+            if [ ! -f ~/caches/images.tar ]; then
+              sudo apt-get update; sudo apt-get install jq nmap
+              docker build --rm=false -t q3a-server:latest ./
+              mkdir -p ~/caches
+              docker save $(docker images | awk 'NR>=2 && ! /^<none>/{print $1}') -o ~/caches/images.tar
+            fi
+      - save_cache:
+          key: docker-{{ checksum ".circleci/config.yml" }}-{{ checksum "Dockerfile" }}
+          paths: ~/caches/images.tar
 
-dependencies:
-  pre:
-    - sudo apt-get update; sudo apt-get install jq nmap
-    - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components install kubectl
-  override:
-    - docker info
-    - docker build --rm=false -t q3a-server:${CIRCLE_SHA1} ./
+  test:
+    machine: true
+    steps:
+      - checkout
+      - restore_cache:
+          key: docker-{{ checksum ".circleci/config.yml" }}-{{ checksum "Dockerfile" }}
+          paths: ~/caches/images.tar
+      - run:
+          name: Load Docker images
+          command: docker load -i ~/caches/images.tar
+      - run: docker run -it -d --name q3a-server-runner -p 27960:27960/udp q3a-server:latest server
+      - run: sleep 7
+      - run: sudo apt-get update; sudo apt-get install jq nmap
+      - run: sudo nmap -Pn -sU -p27960 localhost
+      - run: docker stop q3a-server-runner
+      - store_test_results:
+          path: test_results
 
-test:
-  override:
-    - docker run -it -d --name q3a-server-runner -p 27960:27960/udp q3a-server:${CIRCLE_SHA1} server
-    - sleep 5
-    - sudo nmap -Pn -sU -p27960 localhost
-    - docker stop q3a-server-runner
+  deploy:
+    machine: true
+    steps:
+      - checkout
+      - restore_cache:
+          key: docker-{{ checksum ".circleci/config.yml" }}-{{ checksum "Dockerfile" }}
+          paths: ~/caches/images.tar
+      - run: sudo apt-get update; sudo apt-get install jq nmap
+      - run: sudo /opt/google-cloud-sdk/bin/gcloud --quiet components install kubectl
+      - run:
+          name: Load Docker images
+          command: docker load -i ~/caches/images.tar
+      - run:
+          name: Deploy
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              ./gke-deploy.sh
+            else
+              ./gke-deploy.sh
+            fi
 
-deployment:
-  production:
-    branch: master
-    commands:
-      - ./gke-deploy.sh
-
-  release:
-    tag: /v[0-9]+(\.[0-9]+)*(-[0-9a-zA-Z]+)?/
-    commands:
-      - ./gke-deploy.sh
+workflows:
+  version: 2
+  build-test-deploy:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+      - deploy:
+          requires:
+            - test
+          filters:
+            branches:
+              only:
+                - develop
+                - master
