--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -10,5 +10,5 @@ spec:
     - protocol: UDP
       port: 27960
       targetPort: 27960
-#      nodePort: 30010
+      nodePort: 27960
       name: quake3
